added device add endpoint
